# KnightLauncher

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  windows-release.yml
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: artwork.rs  emudeck.rs  lib.rs  logger.rs  main.rs  ps3.rs  ra.rs  steam.rs
src/lib/: PlatformBadge.svelte  libraryStore.ts  platforms.ts  tauri.ts  types.ts
