[package]
name = "knightlauncher"
version = "0.1.0"
description = "A dual-screen Windows handheld launcher."
authors = ["KnightLauncher"]
edition = "2021"

[lib]
name = "knightlauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
