[package]
name = "knightlauncher"
version = "0.1.23"
description = "A dual-screen Windows handheld launcher."
authors = ["KnightLauncher"]
edition = "2021"

[lib]
name = "knightlauncher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
